# speech_to_text_bot

./: .env_example  .gitignore  .pre-commit-config.yaml  config.py  pyproject.toml
bot/: main.py  utils.py
database/: db.py  db.sqlite3  models.py
file_converter/: file_converter.py
speech_converter/: speech_converter.py
speech_to_text_bot/: main.py  utils.py
tests/: test_speech_to_text_bot.py
